--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  </style>
   <script type="text/javascript" charset="utf-8">
  window.addEventListener('touchstart',function cl(){
-   
+   document.body.requestFullscreen();
  document.querySelector('.cir').addEventListener('touchstart',function tl(){
    
    document.querySelector('.cir').style.backgroundColor = 'yellow';
