--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      height: 100px;
      width: 100px;
      border: 3px solid rgba(200,201,201,0.714);
-     transition: transform 0.04s ease;
+     transition: transform 0.04s ease-in;
    }
  </style>
   <script type="text/javascript" charset="utf-8">
