--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ let y = cv.touches[0].clientY-70;
    document.querySelector('.cir').addEventListener('touchend',function sl(en){
      document.querySelector('.cir').style.boxShadow =  "none";;
      document.querySelector('.cir').style.backgroundColor = 'transparent';
-     let iy = en;
+     let iy = en.changedTouches[0].clientX;
   
    console.log(iy);
    });
