--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ var circle = document.querySelector('.cir');
 let y = cv.touches[0].clientY-70;
    let x = cv.touches[0].clientX-70;
   document.querySelector('.cir').style.transform ="translate("+x+'px'+','+y+'px'+")";
+  console.log(x,y);
 });
 
   
@@ -52,8 +53,16 @@ let y = cv.touches[0].clientY-70;
    
    document.querySelector('.cir').addEventListener('touchend',function sl(en){
      document.querySelector('.cir').style.boxShadow =  "none";;
+     
      document.querySelector('.cir').style.backgroundColor = 'transparent';
-     let iy = en.changedTouches[0].clientX;
+     let ix = en.changedTouches[0].clientX;
+     let iy = en.changedTouches[0].clientY;
+     
+     if(){}
+     else{}
+     if(){}
+     else{}
+
   
    console.log(iy);
    });
