--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ let y = cv.touches[0].clientY-70;
      }
       if(iy > window.visualViewport.height/2){
        console.log('iu');
+       circle.style.top = '20px';
      }
 
      if(ix <= window.visualViewport.width/2){
