--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ let y = cv.touches[0].clientY-70;
      }
 
      if(ix <= window.visualViewport.width/2){
-       console.log('ix');
+       circle.style.transform = "translate(0,20px)";
      }
       if(ix > window.visualViewport.width/2){
       console.log('io');
