--- a/index.html
+++ b/index.html
@@ -57,9 +57,18 @@ let y = cv.touches[0].clientY-70;
      document.querySelector('.cir').style.backgroundColor = 'transparent';
      let ix = en.changedTouches[0].clientX;
      let iy = en.changedTouches[0].clientY;
-     console.log(getPropertyValue(circle));
-     if(iy <= window.visualViewport.height/2){
-     circle.style.transform = "translate("+20+'px'+")";
+     console.log(circle.style);
+     if(iy <= window.visualViewport.height/2 && ix<=window.visualViewport.width/2){
+     circle.style.transform = "translate(20px,20px)";
+     }
+     if(iy <= window.visualViewport.height/2 && ix > window.visualViewport.width/2){
+     circle.style.transform = "translate(20px,20px)";
+     }
+     if(iy > window.visualViewport.height/2 && ix<=window.visualViewport.width/2){
+     circle.style.transform = "translate(20px,20px)";
+     }
+     if(iy > window.visualViewport.height/2 && ix > window.visualViewport.width/2){
+     circle.style.transform = "translate(20px,20px)";
      }
       
    });
