--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ let y = cv.touches[0].clientY-70;
      var caY = window.visualViewport.height-70;
      
      if(iy > window.visualViewport.height/2 && ix<=window.visualViewport.width/2){
-     circle.style.transform = "translate("+caY+"px,20px)";
+     circle.style.transform = "translate("+caX+"px,20px)";
      }
      if(iy > window.visualViewport.height/2 && ix > window.visualViewport.width/2){
      circle.style.transform = "translate("+caX+'px,'+caY+"px)";
