--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ let y = cv.touches[0].clientY-70;
      circle.style.transform = "translate(20px,20px)";
      }
      if(iy <= window.visualViewport.height/2 && ix > window.visualViewport.width/2){
-     circle.style.transform = "translate(20px,"+caY+"px)";
+     circle.style.transform = "translate("+caX+"px,"+"20px")";
      }
      var caX = window.visualViewport.width-70;
      var caY = window.visualViewport.height-70;
      
      if(iy > window.visualViewport.height/2 && ix<=window.visualViewport.width/2){
-     circle.style.transform = "translate("+caX+"px,20px)";
+     circle.style.transform = "translate(20px,"+caY+"px)";
      }
      if(iy > window.visualViewport.height/2 && ix > window.visualViewport.width/2){
      circle.style.transform = "translate("+caX+'px,'+caY+"px)";
